force-app/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <description>An MLB game.</description>
    <label>Game</label>
    <nameField>
        <displayFormat>MLB-{00000}</displayFormat>
        <label>Game Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>