force-app/main/default/objects/Game__c/fields/Away_Team_Hits__c.field-meta.xml
<CustomField>
    <fullName>Away_Team_Hits__c</fullName>
    <label>Away Team Hits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>