force-app/main/default/objects/Game__c/fields/Away_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Away_Team_Name__c</fullName>
    <formula>Away_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Away Team Name</label>
    <type>Text</type>
</CustomField>