force-app/main/default/objects/Game__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATEVALUE(LEFT(Start_DateTime_Raw__c, 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>