force-app/main/default/objects/Game__c/fields/Game_Sports_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>Game_Sports_Data_ID__c</fullName>
    <externalId>true</externalId>
    <label>Game Sports Data ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>