force-app/main/default/objects/Game__c/fields/Home_Team_Errors__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Errors__c</fullName>
    <label>Home Team Errors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>