force-app/main/default/objects/Game__c/fields/Home_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Name__c</fullName>
    <formula>Home_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Team Name</label>
    <type>Text</type>
</CustomField>