force-app/main/default/objects/Game__c/fields/Home_Team_Runs__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Runs__c</fullName>
    <label>Home Team Runs</label>
    <summarizedField>Inning__c.Home_Team_Runs__c</summarizedField>
    <summaryForeignKey>Inning__c.Game__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>