force-app/main/default/objects/Game__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stadium</label>
    <referenceTo>Stadium__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>