force-app/main/default/objects/Game__c/fields/Start_DateTime_Raw__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime_Raw__c</fullName>
    <label>Start DateTime Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>