force-app/main/default/objects/Game__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>TIMEVALUE(MID(Start_DateTime_Raw__c, 12, 8) + &quot;.000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>