force-app/main/default/objects/Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Away_Team__c</columns>
    <columns>Home_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>